Bug 348694 - Changing Keyboard Language Causes a Persistent Crash
Summary: Changing Keyboard Language Causes a Persistent Crash
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keyboard_layout (other bugs)
Version First Reported In: 5.2.2
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Andriy Rysin
URL:
Keywords: drkonqi
: 331938 345611 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-04 10:55 UTC by stockfish
Modified: 2015-09-26 16:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stockfish 2015-06-04 10:55:44 UTC
Application: systemsettings5 (5.2.2)
 (Compiled from sources)
Qt Version: 5.4.1
Operating System: Linux 3.19.0-18-generic x86_64
Distribution: Ubuntu 15.04

-- Information about the crash:
- What I was doing when the application crashed:

- Unusual behavior I noticed:

- Custom settings of the application:

I have a keyboard problem.Im a turkish user and want to use turkish-Q keyboard.But in system settings it already seems turkish-Q keyboard.However what im using now is more like a US keyboard i cant write my native language characters and symbols are incorrect.When i try to change different type of turkish-Q keyboards it gives me error.Now im stuck and dont know what to do.I am barely writing this post to you.if you could help me thanks in advance.My mail is umutkilic@live.com

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings5), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fc7d7301780 (LWP 2688))]

Thread 2 (Thread 0x7fc7c6925700 (LWP 2689)):
#0  0x00007fc7d3a638dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fc7d1d7db72 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007fc7d1d7f64f in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007fc7c8e70099 in QXcbEventReader::run (this=0x219b460) at qxcbconnection.cpp:1105
#4  0x00007fc7d40e4b0e in QThreadPrivate::start (arg=0x219b460) at thread/qthread_unix.cpp:337
#5  0x00007fc7d0c976aa in start_thread (arg=0x7fc7c6925700) at pthread_create.c:333
#6  0x00007fc7d3a6eeed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fc7d7301780 (LWP 2688)):
[KCrash Handler]
#6  QList (l=..., this=0x7ffe309d8760) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:746
#7  QForeachContainer (t=..., this=0x7ffe309d8760) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qglobal.h:869
#8  KCMKeyboardWidget::previewLayout (this=0x256d7c0) at ../../../kcms/keyboard/kcm_keyboard_widget.cpp:380
#9  0x00007fc7b76cf1fd in KCMKeyboardWidget::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at moc_kcm_keyboard_widget.cpp:135
#10 0x00007fc7d43539c9 in QMetaObject::activate (sender=sender@entry=0x2583520, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffe309d8920) at kernel/qobject.cpp:3716
#11 0x00007fc7d4354057 in QMetaObject::activate (sender=sender@entry=0x2583520, m=m@entry=0x7fc7d5648a60 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffe309d8920) at kernel/qobject.cpp:3582
#12 0x00007fc7d54bd012 in QAbstractButton::clicked (this=this@entry=0x2583520, _t1=false) at .moc/moc_qabstractbutton.cpp:298
#13 0x00007fc7d520a675 in QAbstractButtonPrivate::emitClicked (this=0x258b2d0) at widgets/qabstractbutton.cpp:534
#14 0x00007fc7d520b299 in QAbstractButtonPrivate::click (this=0x258b2d0) at widgets/qabstractbutton.cpp:527
#15 0x00007fc7d520b454 in QAbstractButton::mouseReleaseEvent (this=0x2583520, e=0x7ffe309d8de0) at widgets/qabstractbutton.cpp:1132
#16 0x00007fc7d51521e8 in QWidget::event (this=0x2583520, event=0x7ffe309d8de0) at kernel/qwidget.cpp:9022
#17 0x00007fc7d510eb2c in QApplicationPrivate::notify_helper (this=0x2183b10, receiver=0x2583520, e=0x7ffe309d8de0) at kernel/qapplication.cpp:3720
#18 0x00007fc7d51148eb in QApplication::notify (this=0x7ffe309d8b20, receiver=0x7ffe309d8b40, e=0x7ffe309d8de0) at kernel/qapplication.cpp:3280
#19 0x00007fc7d4322c2b in QCoreApplication::notifyInternal (this=0x7ffe309d96b0, receiver=receiver@entry=0x2583520, event=event@entry=0x7ffe309d8de0) at kernel/qcoreapplication.cpp:935
#20 0x00007fc7d51133da in sendSpontaneousEvent (event=0x7ffe309d8de0, receiver=0x2583520) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#21 QApplicationPrivate::sendMouseEvent (receiver=0x2583520, event=0x7ffe309d8de0, alienWidget=0x2583520, nativeWidget=0x2216be0, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2751
#22 0x00007fc7d516acc0 in QWidgetWindow::handleMouseEvent (this=0x22a1060, event=0x7ffe309d91f0) at kernel/qwidgetwindow.cpp:543
#23 0x00007fc7d516ce33 in QWidgetWindow::event (this=0x22a1060, event=0x7ffe309d91f0) at kernel/qwidgetwindow.cpp:210
#24 0x00007fc7d510eb2c in QApplicationPrivate::notify_helper (this=0x2183b10, receiver=0x22a1060, e=0x7ffe309d91f0) at kernel/qapplication.cpp:3720
#25 0x00007fc7d5114000 in QApplication::notify (this=0x7ffe309d96b0, receiver=0x22a1060, e=0x7ffe309d91f0) at kernel/qapplication.cpp:3503
#26 0x00007fc7d4322c2b in QCoreApplication::notifyInternal (this=0x7ffe309d96b0, receiver=0x22a1060, event=0x7ffe309d91f0) at kernel/qcoreapplication.cpp:935
#27 0x00007fc7d4b51f82 in sendSpontaneousEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#28 QGuiApplicationPrivate::processMouseEvent (e=0x2653360) at kernel/qguiapplication.cpp:1774
#29 0x00007fc7d4b53b45 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x2653360) at kernel/qguiapplication.cpp:1576
#30 0x00007fc7d4b3834f in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:572
#31 0x00007fc7c8e9a590 in userEventSourceDispatch (source=<optimized out>) at eventdispatchers/qeventdispatcher_glib.cpp:70
#32 0x00007fc7d0778c3d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007fc7d0778f20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007fc7d0778fcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fc7d437bc57 in QEventDispatcherGlib::processEvents (this=0x21c31c0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#36 0x00007fc7d43203e2 in QEventLoop::exec (this=this@entry=0x7ffe309d9590, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#37 0x00007fc7d432802c in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1188
#38 0x00007fc7d4b4931c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1510
#39 0x00007fc7d510a7a5 in QApplication::exec () at kernel/qapplication.cpp:2956
#40 0x000000000040eebc in main (argc=1, argv=<optimized out>) at ../../app/main.cpp:54

Reported using DrKonqi
Comment 1 David Edmundson 2015-08-08 11:13:11 UTC
*** Bug 345611 has been marked as a duplicate of this bug. ***
Comment 2 David Rosca 2015-09-17 07:32:11 UTC
Git commit b9cfcbef00481475e300c3a6dff303aa45b943c6 by David Rosca.
Committed on 17/09/2015 at 07:31.
Pushed by drosca into branch 'Plasma/5.4'.

kcm_keyboard: Fix crash when trying to show invalid preview

Rules::getLayoutInfo() can return null.
FIXED-IN: 5.4.2
REVIEW: 125265

M  +4    -0    kcms/keyboard/kcm_keyboard_widget.cpp

http://commits.kde.org/plasma-desktop/b9cfcbef00481475e300c3a6dff303aa45b943c6
Comment 3 David Rosca 2015-09-26 16:21:25 UTC
*** Bug 331938 has been marked as a duplicate of this bug. ***