kcm_keyboard: Fix crash when trying to show invalid preview

Rules::getLayoutInfo() can return null.

BUG: 348694
FIXED-IN: 5.4.2
REVIEW: 125265